resources/public/style.css
/*
z-index:
 0 - canvas
 1 - grid
 2 - reticule
 3 - template
 6 - palette
 7 - timer
 8 - login overlay
 9 - ui blobs
10 - admin boxes
18 - controls header

21 - panels
22 - lookup, emoji-picker
22 - admin-check popup

98 - lost connection
99 - alert box
*/

/*//////////////////////////*\
| Themeing
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/

html {
    --general-text-color: #000;
    --general-background: #CDCDCD;

    --kbd-background: #eee;
    --kbd-border-color: #ddd;
    --kbd-text-color: black;

    --button-background: #ddd;
    --button-border-color: #999;
    --button-text-color: #000;
    --button-text-color-disabled: #555;
    --button-border-color-disabled: #777;
    --button-background-disabled: #aaa;
    --button-text-color-hover: #fff;
    --button-border-color-hover: #999;
    --button-background-hover: #ce4747;

    --dangerous-button-text-color: #fff;
    --dangerous-button-background: #e20;
    --dangerous-button-border-color: unset;
    --dangerous-button-text-color-hover: var(--dangerous-button-text-color);
    --dangerous-button-background-hover: #f10;
    --dangerous-button-border-color-hover: var(--dangerous-button-border-color);

    --floating-panel-text-color: inherit;
    --floating-panel-border-color: #ccc;
    --floating-panel-background: #eee;

    --bubble-background: rgba(0, 0, 0, 0.7);
    --bubble-text-color: #fff;

    --palette-background: rgba(255, 255, 255, 0.8);
    --palette-item-border-color: black;
    --palette-overlay-background: rgba(255, 255, 255, 0.9);
    --palette-overlay-text-color: #000;
    --palette-deselect-button-color: inherit;

    --undo-text-color: #000;
    --undo-background: linear-gradient(to top, #FFFC, #FFF);
    --undo-border-color: #000;

    --input-text-color: #000;
    --input-background: #fff;
    --input-border-color: #ccc;
    --input-placeholder-text-color: #666;

    --text-blue-color:#00a;
    --text-green-color:#0a0;
    --text-red-color:#a00;
    --text-muted-color:#8c8c8c;
    --text-yellow-color:#f0ff27;
    --text-orange-color:#e67700;

    --copypulse-color: rgba(0, 211, 221, 0.7);
    --error-color: #cc3333;
    --notification-color: #b20;
    --ping-highlight-color: #feedd1;
    --ping-flash-color: #8ef7d1;
    --ping-counter-color: #ffa500;
    --notification-expiry-color: #b66;

    --panel-background: #dfdfdf;
    --panel-text-color: inherit;
    --panel-border-color: #000;
    --panel-header-text-color: inherit;
    --panel-header-background: linear-gradient(to bottom, #ccc, #bbb);
    --panel-footer-text-color: #666;
    --panel-footer-background: #d6d6d6;
    --panel-close-button-color: #a00;
    --panel-close-button-color-hover: var(--panel-close-button-color);
    --panel-close-button-color-active: var(--panel-close-button-color);

    --panel-article-background: #0002;
    --panel-article-text-color: var(--panel-text-color);
    --panel-article-border-color: var(--panel-border-color);
    --panel-article-header-text-color: inherit;
    --panel-article-header-background: var(--panel-header-background);
    --panel-article-footer-text-color: var(--panel-footer-text-color);
    --panel-article-footer-background: var(--panel-footer-background);

    --panel-trigger-outline-color: #AAA;

    --option-bubble-position-border-color-hovered: #6495ED;
    --option-bubble-position-background-hovered: rgba(0, 0, 0, 0);
    --option-bubble-position-background-selected: #eee;

    --chat-separator-color: #bfbfbf;
    --chat-odd-background: #d5d5d5;
    --chat-abbr-underline-color: #aaa;
    --chat-badge-background: #ccc;
    --chat-badge-text-color: #770;
    --chat-server-action-text-color: #555;
    --chat-user-text-shadow-color: #ccc;
    --chat-purged-text-color: #888;

    --chat-tobottom-text-color: #fff;
    --chat-tobottom-background: #66a;
    --chat-tobottom-text-color-hover: var(--chat-tobottom-text-color);
    --chat-tobottom-background-hover: #5c5ca0;

    --chat-typeahead-menu-background: #b9b9b9;
    --chat-typeahead-item-text-color: inherit;
    --chat-typeahead-item-background: #a3a3a3;
    --chat-typeahead-item-background-hover: #949494;
    --chat-typeahead-item-background-active: #828282;

    --emoji-picker-border-color: #999999;
    --emoji-picker-shadow-color: #CCCCCC;
    --emoji-picker-background: #FFFFFF;
    --emoji-picker-preview-name-text-color: #666666;
    --emoji-picker-tab-icon-color: inherit;
    --emoji-picker-tab-icon-color-selected: #4F81E5;
    --emoji-picker-section-text-color: #333333;
    --emoji-picker-emoji-color: #333333;
    --emoji-picker-emoji-background: transparent;
    --emoji-picker-emoji-background-hover: #E8F4F9;
    --emoji-picker-search-input-border-color: #CCCCCC;
    --emoji-picker-search-input-background: #fff;
    --emoji-picker-search-input-text-color: #000;
    --emoji-picker-search-icon-color: #CCCCCC;
    --emoji-picker-search-no-results-color: #666666;
    --emoji-picker-variant-overlay-background: rgba(0, 0, 0, 0.7);
    --emoji-picker-variant-popup-background: #FFFFFF;
    --emoji-picker-variant-close-button-color: inherit;
}

/*//////////////////////////*\
| General Styles
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/

html, body {
    margin: 0;
    width: 100%;
    height: 100%;
    color: #000;
    color: var(--general-text-color);
    background: #CDCDCD;
    background: var(--general-background);
    overflow: hidden;
    position: relative;
    font-family: sans-serif;
    -webkit-text-size-adjust: 100%;
    -moz-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    text-size-adjust: 100%;
}

* {
    box-sizing: border-box;
}

.float-left {
    float: left !important;
}

.float-right {
    float: right !important;
}

.float-clear {
    clear: both !important;
}

.hidden {
    display: none !important;
}

.fullwidth {
    width: 100%;
}

a, a:hover, a:visited, a:active, .link, .link:hover, .link:active {
    color: inherit;
    cursor: pointer;
    text-decoration: underline;
}
/* ... */

